<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.login.LoginActivity">

    <FrameLayout
        android:id="@+id/flBackgroundWave"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBackgroundWave"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/iv_blue_wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/action_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xlarge"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/spacing_medium"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/unfocus_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flBackgroundWave" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"
        android:padding="@dimen/spacing_medium"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/unfocus_color"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/prompt_phone_number"
        android:inputType="phone"
        android:padding="@dimen/spacing_medium"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/unfocus_color"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="@dimen/spacing_medium"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/unfocus_color"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/prompt_confirm_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="@dimen/spacing_medium"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHint="@color/unfocus_color"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:background="@drawable/button_primary_background"
        android:elevation="10dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/action_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/etName"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etCPassword" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


    <TextView
        android:id="@+id/tvHaveAccountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_regular"
        android:padding="@dimen/spacing_small"
        android:text="@string/have_an_acc"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/action_log_in"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="@+id/tvHaveAccountLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvHaveAccountLabel"
        app:layout_constraintTop_toTopOf="@+id/tvHaveAccountLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>