<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.login.LoginActivity">

    <FrameLayout
        android:id="@+id/flBackgroundWave"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBackgroundWave"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/iv_blue_wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/action_log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flBackgroundWave">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/prompt_email"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/unfocus_color"
            android:textSize="@dimen/text_size_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintEnd_toEndOf="@+id/tiEmail"
        app:layout_constraintStart_toStartOf="@+id/tiEmail"
        app:layout_constraintTop_toBottomOf="@+id/tiEmail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/unfocus_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/unfocus_color"
            android:textSize="@dimen/text_size_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:elevation="5dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/action_log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tiEmail"
        app:layout_constraintStart_toStartOf="@+id/tiEmail"
        app:layout_constraintTop_toBottomOf="@+id/tiPassword" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tiPassword"
        app:layout_constraintEnd_toEndOf="@+id/tiPassword"
        app:layout_constraintStart_toStartOf="@+id/tiPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btForgotPassword"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:padding="@dimen/spacing_medium"
        android:text="@string/label_forgot_psw"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="@+id/btLogin"
        app:layout_constraintStart_toStartOf="@+id/btLogin"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />

    <TextView
        android:id="@+id/tvNotHaveAccLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_regular"
        android:padding="@dimen/spacing_small"
        android:text="@string/do_not_have_acc"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvRegister"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/action_register"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="@+id/tvNotHaveAccLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNotHaveAccLabel"
        app:layout_constraintTop_toTopOf="@+id/tvNotHaveAccLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>