<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    tools:context=".ui.CheckOutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:subtitleTextColor="?attr/colorOnPrimary"
            app:title="Checkout"
            app:titleTextAppearance="@style/ToolbarTitleText"
            app:titleTextColor="?attr/colorOnPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar">

        <TextView
            android:id="@+id/lblItemCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="Item count"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="50"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintBottom_toBottomOf="@+id/lblItemCount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lblItemCount" />

        <TextView
            android:id="@+id/lblTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:fontFamily="@font/roboto_regular"
            android:text="Total price"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintStart_toStartOf="@+id/lblItemCount"
            app:layout_constraintTop_toBottomOf="@+id/lblItemCount" />

        <TextView
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="500 MMK"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintBottom_toBottomOf="@+id/lblTotalPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lblTotalPrice" />

        <Spinner
            android:id="@+id/spinner_retrieve_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/custom_edit_text"
            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_circle"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/prompt_retrieve_type"
            android:inputType="textEmailAddress"
            android:padding="@dimen/spacing_medium"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            android:textColorHint="@color/unfocus_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTotalPrice" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/custom_edit_text"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/prompt_address"
            android:visibility="visible"
            android:inputType="textEmailAddress"
            android:padding="@dimen/spacing_medium"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            android:textColorHint="@color/unfocus_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_retrieve_type" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_choose_branch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/custom_edit_text"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/prompt_choose_branch"
            android:inputType="textEmailAddress"
            android:padding="@dimen/spacing_medium"
            android:visibility="visible"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            android:textColorHint="@color/unfocus_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_address" />

        <Spinner
            android:id="@+id/spinner_payment_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/custom_edit_text"
            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_circle"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/prompt_payment_type"
            android:inputType="textEmailAddress"
            android:padding="@dimen/spacing_medium"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            android:textColorHint="@color/unfocus_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_choose_branch" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@drawable/custom_edit_text"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/prompt_phone_number"
            android:inputType="textEmailAddress"
            android:padding="@dimen/spacing_medium"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            android:textColorHint="@color/unfocus_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_payment_type" />


        <Button
            android:id="@+id/btnCheckOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/spacing_xxlarge"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:drawableStart="@drawable/ic_cart"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="Checkout"
            android:textColor="@android:color/white"
            android:translationZ="2dp"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>